<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        style="@style/title_dialogs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/add_user_title_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_acept">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_age"
                android:text=""
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <EditText
                android:id="@+id/street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_street"
                android:text=""
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <EditText
                android:id="@+id/exterior_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_exterior_number"
                android:text=""
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <EditText
                android:id="@+id/interior_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_interior_number"
                app:layout_constraintTop_toBottomOf="@+id/title" />
            <EditText
                android:id="@+id/neighborhood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_neighborhood"
                android:text=""
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/state_title"
                style="@style/title_dialogs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/user_title_selection_state" />

            <Spinner
                android:id="@+id/spinner_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/mayor_title"
                style="@style/title_dialogs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/user_title_selection_mayor"/>

            <Spinner
                android:id="@+id/spinner_mayor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <ImageView
                android:id="@+id/user_photo"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/btn_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text ="@string/user_image"/>

        </LinearLayout>

    </ScrollView>
    <Button
        android:id="@+id/btn_add_acept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/green_primary"
        android:text="@string/btn_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_add_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/red"
        android:text="@string/btn_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_acept" />

</androidx.constraintlayout.widget.ConstraintLayout>